Chore: added core integration and simulation page
